Integrate an agent-bond-derived Prometheus jmx-exporter wrapper to work around LOGMGR-218
Signed-off-by: Brian Stansberry <brian.stansberry@redhat.com>

--- a/jboss/container/eap/prometheus/config/7.2/module.yaml
+++ b/jboss/container/eap/prometheus/config/7.2/module.yaml
@@ -5,7 +5,7 @@ description: Provides Prometheus JMX Exporter configuration for use with EAP 7.2
 
 modules:
   install:
-  - name: jboss.container.eap.prometheus.agent
+  - name: jboss.container.eap.agent-bond.agent
 
 execute:
 - script: configure.sh
